<resources>
    <string name="app_name">Football App</string>
    <string name="title_activity_main">Football Leagues</string>
    <string name="title_activity_league_details">League Details</string>
    <string name="title_activity_team_details">Team Details</string>
    <string name="title_activity_favorite">Favorites</string>
    <string name="title_activity_match_details">Match Details</string>
    <string name="action_search">Search</string>
    <string name="action_favorite">Favorites</string>
    <string name="league_img_details">League Image Details</string>
    <string name="logo_team_1">Logo Team 1</string>
    <string name="logo_team_2">Logo Team 2</string>
    <string name="vs">Vs</string>
    <string name="prev_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="tanggal">Minggu, 25 April 2019</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="sport">Sport</string>
    <string name="country">Country</string>
    <string name="website">Website</string>
    <string name="skor">0</string>
    <string name="textKiri">Text Kiri</string>
    <string name="textTengah">Text Tengah</string>
    <string name="textKanan">Text Kanan</string>
    <string name="no_data">Data not Found.</string>
    <string name="formation">Formation</string>
    <string name="goal">Goal</string>
    <string name="lineup_goal_keeper">Lineup Goal Keeper</string>
    <string name="lineup_defense">Lineup Defense</string>
    <string name="lineup_mid_field">Lineup Mid Field</string>
    <string name="lineup_forward">Lineup Forward</string>
    <string name="lineup_subtitutes">Lineup Subtitutes</string>
    <string name="red_cards">Red Cards</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="title_activity_search">Search</string>
    <string name="search_hint">Type this to search</string>
    <string name="prev_match_fragment">Previous Match Fragment</string>
    <string name="next_match_fragment">Next Match Fragment</string>
    <string name="prev_favorite_match_fragment">Previous Favorite Match Fragment</string>
    <string name="next_favorite_match_fragment">Next Favorite Match Fragment</string>
    <string name="team">Team</string>
    <string name="favorite_team_fragment">Favorite Team Fragment</string>
    <string name="match">Match</string>
    <string name="team_name">Team Name</string>
    <string name="team_description">Team Description</string>
    <string name="standings">Standings</string>
    <string name="team_fragment">Team Fragment</string>
    <string name="nol_nol">000</string>
    <string name="delete_favorite">Delete favorite</string>
    <string name="insert_favorite">Insert to favorite</string>
    <string name="action">Action</string>

    <string-array name="league_id">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4512</item>
        <item>4356</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>

    <string-array name="league_name">
        <item>English Premier League</item>
        <item>French Ligue 1</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
        <item>American Major League Soccer</item>
        <item>UEFA Super Cup</item>
        <item>Australian A-League</item>
        <item>Scottish Premier League</item>
        <item>English League 1</item>
    </string-array>

    <string-array name="league_image">
        <item>https://www.thesportsdb.com/images/media/league/badge/i6o0kh1549879062.png/preview</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/8f5jmf1516458074.png/preview</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/0j55yv1534764799.png/preview</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/ocy2fe1566216901.png/preview</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/7onmyv1534768460.png/preview</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/dqo6r91549878326.png/preview</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/1eimvx1551123834.png/preview</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/sfhanl1547383730.png/preview</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/vw72bl1534096708.png/preview</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/vm1qlp1535986713.png/preview</item>
    </string-array>
</resources>
